New example for webfilter search engine

--- a/examples/fortios_system_central_management_example.yml
+++ b/examples/fortios_system_central_management_example.yml
@@ -13,7 +13,7 @@
       vdom:  "{{  vdom }}"
       system_central_management:
         mode: normal
-        type: fortimanager
+        type: none
         schedule-config-restore: enable
         schedule-script-restore: enable
         allow-push-configuration: enable
