New example for firewall addgrp

--- a/examples/fortios_webfilter_search_engine_example.yml
+++ b/examples/fortios_webfilter_search_engine_example.yml
@@ -17,6 +17,6 @@
         hostname: "myhostname"
         name: "default_name_5"
         query: "?query="
-        safesearch: "enable"
+        safesearch: "url"
         safesearch-str: "safesearch:"
         url: "http://searchurl.com"
