New module for System Vdom

--- a/examples/fortios_system_api_user_example.yml
+++ b/examples/fortios_system_api_user_example.yml
@@ -15,7 +15,7 @@
       system_api_user:
         state: "present"
         accprofile: "prof_admin"
-        comments: "<your_own_value>"
+        comments: "My comment"
         cors-allow-origin: "*"
         name: "userA"
         peer-auth: "disable"
