--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -3,253 +3,262 @@ releases:
   2.0.0:
     changes:
       breaking_changes:
-      - Generic FortiOS Module - FOS module to issue generic request with Ansible.
-      - Support for FOS Monitor API - several modules are new for monitor API.
-      - Unified Collection - The fortios collection itself will be adapting any FOS
-        platforms.
+        - Generic FortiOS Module - FOS module to issue generic request with Ansible.
+        - Support for FOS Monitor API - several modules are new for monitor API.
+        - Unified Collection - The fortios collection itself will be adapting any FOS
+          platforms.
       bugfixes:
-      - Deprecated second-layer state module parameter
-      - enable_log - Explicit logging option.
+        - Deprecated second-layer state module parameter
+        - enable_log - Explicit logging option.
       known_issues:
-      - Modules for monitor API are not versioned yet.
+        - Modules for monitor API are not versioned yet.
       major_changes:
-      - New module fortios_configuration_fact
-      - New module fortios_json_generic
-      - New module fortios_monitor
-      - New module fortios_monitor_fact
+        - New module fortios_configuration_fact
+        - New module fortios_json_generic
+        - New module fortios_monitor
+        - New module fortios_monitor_fact
       release_summary: The major breaking release of FOS 2.x collections.
       removed_features:
-      - Removed module fortios_facts
-      - Removed module fortios_registration_forticare
-      - Removed module fortios_registration_vdom
-      - Removed module fortios_system_config_backup_restore
-      - Removed module fortios_system_vmlicense
+        - Removed module fortios_facts
+        - Removed module fortios_registration_forticare
+        - Removed module fortios_registration_vdom
+        - Removed module fortios_system_config_backup_restore
+        - Removed module fortios_system_vmlicense
     fragments:
-    - overall.yml
-    release_date: '2021-04-05'
+      - overall.yml
+    release_date: "2021-04-05"
   2.0.1:
     changes:
       minor_changes:
-      - fixed pylint testing errors.
+        - fixed pylint testing errors.
     fragments:
-    - 2.0.1.yml
-    release_date: '2021-04-07'
+      - 2.0.1.yml
+    release_date: "2021-04-07"
   2.0.2:
     changes:
       bugfixes:
-      - Fix the authorization fails at log in with username and password in FOS7.0.
-      - Github Issue 103
-      - Github Issue 105
+        - Fix the authorization fails at log in with username and password in FOS7.0.
+        - Github Issue 103
+        - Github Issue 105
       major_changes:
-      - Improve ``fortios_configuration_fact`` to use multiple selectors concurrently.
-      - Support ``check_mode`` in all cofigurationAPI-based modules.
-      - Support filtering for fact gathering modules ``fortios_configuration_fact``
-        and ``fortios_monitor_fact``.
-      - Support moving policy in ``firewall_central_snat_map``.
-      - Unify schemas for monitor API.
+        - Improve ``fortios_configuration_fact`` to use multiple selectors concurrently.
+        - Support ``check_mode`` in all cofigurationAPI-based modules.
+        - Support filtering for fact gathering modules ``fortios_configuration_fact``
+          and ``fortios_monitor_fact``.
+        - Support moving policy in ``firewall_central_snat_map``.
+        - Unify schemas for monitor API.
       release_summary: patch release of 2.0.2
     fragments:
-    - release_2.0.2.yml
-    release_date: '2021-05-14'
+      - release_2.0.2.yml
+    release_date: "2021-05-14"
   2.1.0:
     changes:
       bugfixes:
-      - Disable check_mode feature from all global objects of configuration modules
-        due to 'state' issue.
-      - Fix a bug in IP_PREFIX.match().
-      - Fix the issue that the ``server_type`` is not updated in ``fortios_system_central_management``.
-      - Fix the unexpected warning caused by optinal params in ``fortios_monitor_fact``
-        and ``fortios_monitor``.
+        - Disable check_mode feature from all global objects of configuration modules
+          due to 'state' issue.
+        - Fix a bug in IP_PREFIX.match().
+        - Fix the issue that the ``server_type`` is not updated in ``fortios_system_central_management``.
+        - Fix the unexpected warning caused by optinal params in ``fortios_monitor_fact``
+          and ``fortios_monitor``.
       major_changes:
-      - New module fortios_monitor_fact.
-      - Support Fortios 7.0.
-      - Support Log APIs.
+        - New module fortios_monitor_fact.
+        - Support Fortios 7.0.
+        - Support Log APIs.
       release_summary: minor release of 2.1.0
     fragments:
-    - release_2.1.0.yml
-    release_date: '2021-06-25'
+      - release_2.1.0.yml
+    release_date: "2021-06-25"
   2.1.1:
     changes:
       bugfixes:
-      - Fix the KeyError caused by non-required multi-value attributes in an object.
+        - Fix the KeyError caused by non-required multi-value attributes in an object.
       release_summary: patch release of 2.1.1
     fragments:
-    - 2.1.1_release.yml
-    release_date: '2021-06-29'
+      - 2.1.1_release.yml
+    release_date: "2021-06-29"
   2.1.2:
     changes:
       bugfixes:
-      - Fix a regression bug caused by non-required attributes.
-      - Fix an intentional exception for listed options.
+        - Fix a regression bug caused by non-required attributes.
+        - Fix an intentional exception for listed options.
       release_summary: patch release of 2.1.2
     fragments:
-    - 2.1.2_release.yml
-    release_date: '2021-07-15'
+      - 2.1.2_release.yml
+    release_date: "2021-07-15"
   2.1.3:
     changes:
       bugfixes:
-      - Fix Github issue
-      - Fix the corner cases that response does not have status in it.
-      - Fix the filters error when fetching multiple facts with selectors for a configuration
-        module (Github issue
+        - Fix Github issue
+        - Fix the corner cases that response does not have status in it.
+        - Fix the filters error when fetching multiple facts with selectors for a configuration
+          module (Github issue
       major_changes:
-      - Add real-world use cases in the example section for some configuration modules.
-      - Collect the current configurations of the modules and convert them into playbooks.
-      - Support FortiOS 7.0.1.
-      - Support member operation (delete/add extra members) on an object that has
-        a list of members in it.
-      - Support selectors feature in ``fortios_monitor_fact`` and ``fortios_log_fact``.
+        - Add real-world use cases in the example section for some configuration modules.
+        - Collect the current configurations of the modules and convert them into playbooks.
+        - Support FortiOS 7.0.1.
+        - Support member operation (delete/add extra members) on an object that has
+          a list of members in it.
+        - Support selectors feature in ``fortios_monitor_fact`` and ``fortios_log_fact``.
       release_summary: patch release of 2.1.3
     fragments:
-    - 2.1.3_release.yml
-    release_date: '2021-11-11'
+      - 2.1.3_release.yml
+    release_date: "2021-11-11"
   2.1.4:
-    release_date: '2022-02-04'
+    release_date: "2022-02-04"
   2.1.5:
     changes:
       bugfixes:
-      - Fix issues in version mismatch logic.
-      - Fix status issue in fortios_json_generic().
-      - Fix the issue of inconsistent data types in different schemas.
+        - Fix issues in version mismatch logic.
+        - Fix status issue in fortios_json_generic().
+        - Fix the issue of inconsistent data types in different schemas.
       major_changes:
-      - Support FortiOS 7.0.2, 7.0.3, 7.0.4, 7.0.5.
+        - Support FortiOS 7.0.2, 7.0.3, 7.0.4, 7.0.5.
       release_summary: patch release of 2.1.5
     fragments:
-    - 2.1.5_release.yml
-    release_date: '2022-04-22'
+      - 2.1.5_release.yml
+    release_date: "2022-04-22"
   2.1.6:
     changes:
       bugfixes:
-      - Add defaut value for enable_log param.
-      - Fix import issues in sanity-test and improve unit tests.
-      - Fix parameter-list-no-elements error in sanity-test.
-      - Fix syntax issue in python2.7.
-      - Fix the syntax error in the three wireless_controller_hotspot20 modules.
-      - Relicense the FortiOS Collection under GPLv3+.
-      - Update the logic in check_legacy_fortiosapi.
-      - Use collection version number in the doc.
+        - Add defaut value for enable_log param.
+        - Fix import issues in sanity-test and improve unit tests.
+        - Fix parameter-list-no-elements error in sanity-test.
+        - Fix syntax issue in python2.7.
+        - Fix the syntax error in the three wireless_controller_hotspot20 modules.
+        - Relicense the FortiOS Collection under GPLv3+.
+        - Update the logic in check_legacy_fortiosapi.
+        - Use collection version number in the doc.
       release_summary: patch release of 2.1.6
     fragments:
-    - 2.1.6_release.yml
-    release_date: '2022-05-20'
+      - 2.1.6_release.yml
+    release_date: "2022-05-20"
   2.1.7:
     changes:
       bugfixes:
-      - Fix the Github Issue 187.
-      - Fix the Github Issue 188 and 189.
-      - Fix the Github Issue 190.
-      - Fix the Github Issue 191.
-      - Fix the error message in the debugging log when using ``access_token``.
-      - Fix the issue when filtering out parameter with space in the module ``fortios_configuration_fact``.
-      - Fix typo in the documentation of ``Install FortiOS Galaxy Collection``.
+        - Fix the Github Issue 187.
+        - Fix the Github Issue 188 and 189.
+        - Fix the Github Issue 190.
+        - Fix the Github Issue 191.
+        - Fix the error message in the debugging log when using ``access_token``.
+        - Fix the issue when filtering out parameter with space in the module ``fortios_configuration_fact``.
+        - Fix typo in the documentation of ``Install FortiOS Galaxy Collection``.
       major_changes:
-      - Support Diff feature in check_mode.
-      - Support Fortios 7.2.0.
+        - Support Diff feature in check_mode.
+        - Support Fortios 7.2.0.
       release_summary: patch release of 2.1.7
     fragments:
-    - 2.1.7_release.yml
-    release_date: '2022-08-12'
+      - 2.1.7_release.yml
+    release_date: "2022-08-12"
   2.2.0:
     changes:
       bugfixes:
-      - Fix issue of filter content could not contain spaces (#208);
-      - Fix issue of missing some options for monitor modules (#196);
-      - Fix list type not match issue;
+        - Fix issue of filter content could not contain spaces (#208);
+        - Fix issue of missing some options for monitor modules (#196);
+        - Fix list type not match issue;
       major_changes:
-      - Support FortiOS v7.0.6, v7.0.7, v7.0.8, v7.2.1, v7.2.2.
+        - Support FortiOS v7.0.6, v7.0.7, v7.0.8, v7.2.1, v7.2.2.
       release_summary: patch release of 2.2.0
     fragments:
-    - 2.2.0_release.yml
-    release_date: '2022-11-09'
+      - 2.2.0_release.yml
+    release_date: "2022-11-09"
   2.2.1:
     changes:
       bugfixes:
-      - Fix invalid arguments in version_schemas;
-      - Fix list type arguments inconsistency;
-      - Fix supports_check_mode issue for _info and _facts modules;
+        - Fix invalid arguments in version_schemas;
+        - Fix list type arguments inconsistency;
+        - Fix supports_check_mode issue for _info and _facts modules;
       release_summary: patch release of 2.2.1
     fragments:
-    - 2.2.1_release.yml
-    release_date: '2022-12-02'
+      - 2.2.1_release.yml
+    release_date: "2022-12-02"
   2.2.2:
     changes:
       bugfixes:
-      - Add required field for module log_fact;
-      - Fix runtime issue (#214);
-      - Fix sanity test errors in validate-modules test;
+        - Add required field for module log_fact;
+        - Fix runtime issue (#214);
+        - Fix sanity test errors in validate-modules test;
       release_summary: patch release of 2.2.2
     fragments:
-    - 2.2.2_release.yml
-    release_date: '2022-12-08'
+      - 2.2.2_release.yml
+    release_date: "2022-12-08"
   2.2.3:
     changes:
       bugfixes:
-      - Fix the issue that all the params with underscore cannot be set under member
-        operation;
-      - Fix the login issue (#232);
-      - Fix the output path issue (#227);
+        - Fix the issue that all the params with underscore cannot be set under member
+          operation;
+        - Fix the login issue (#232);
+        - Fix the output path issue (#227);
       major_changes:
-      - Add annotations of member operation for every module.
-      - Update ``fortios.py`` for higher performance;
-      - supports temporary session key and pre/post login banner;
-      - update the examples on how to use member operation in Q&A.
+        - Add annotations of member operation for every module.
+        - Update ``fortios.py`` for higher performance;
+        - supports temporary session key and pre/post login banner;
+        - update the examples on how to use member operation in Q&A.
       release_summary: patch release of 2.2.3
     fragments:
-    - 2.2.3_release.yml
-    release_date: '2023-03-17'
+      - 2.2.3_release.yml
+    release_date: "2023-03-17"
   2.3.0:
     changes:
       bugfixes:
-      - Fix the error of pure number password.
+        - Fix the error of pure number password.
       major_changes:
-      - Improve the `no_log` feature in some modules;
-      - Improve the documentation and example for `seq_num` in `fortios_router_static`;
-      - Improve the documentation for `member_path` in all the modules;
-      - Support new FOS versions.
+        - Improve the `no_log` feature in some modules;
+        - Improve the documentation and example for `seq_num` in `fortios_router_static`;
+        - Improve the documentation for `member_path` in all the modules;
+        - Support new FOS versions.
       release_summary: patch release of 2.3.0
     fragments:
-    - 2.3.0_release.yml
-    release_date: '2023-05-19'
+      - 2.3.0_release.yml
+    release_date: "2023-05-19"
   2.3.1:
     changes:
       bugfixes:
-      - Fix the issue while comparing the changes in before and after data in check_mode;
-      - Fix the issues that some parameters are not in a specific fos vm versions.
-      - Fix the request error when updating global object;
-      - Fix the sanity test error;
-      - Fix the wrong credential error when using username/password in fos verion
-        6;
+        - Fix the issue while comparing the changes in before and after data in check_mode;
+        - Fix the issues that some parameters are not in a specific fos vm versions.
+        - Fix the request error when updating global object;
+        - Fix the sanity test error;
+        - Fix the wrong credential error when using username/password in fos verion
+          6;
       major_changes:
-      - Add readthedocs.yaml file.
-      - Update Q&A regarding setting up FortiToken multi-factor authentication;
+        - Add readthedocs.yaml file.
+        - Update Q&A regarding setting up FortiToken multi-factor authentication;
       release_summary: patch release of 2.3.1
     fragments:
-    - 2.3.1_release.yml
-    release_date: '2023-08-04'
+      - 2.3.1_release.yml
+    release_date: "2023-08-04"
   2.3.2:
     changes:
       bugfixes:
-      - Fix the hyperlink issue for the supported FOS versions in USER's GUIDE.
+        - Fix the hyperlink issue for the supported FOS versions in USER's GUIDE.
       major_changes:
-      - Improve the document for adding notes and examples in Q&A for modules using
-        Integer number as the mkey.
+        - Improve the document for adding notes and examples in Q&A for modules using
+          Integer number as the mkey.
       release_summary: patch release of 2.3.2
     fragments:
-    - 2.3.2_release.yml
-    release_date: '2023-08-30'
+      - 2.3.2_release.yml
+    release_date: "2023-08-30"
   2.3.3:
     changes:
       bugfixes:
-      - Fix the issue of one session remaining open after the task is finished.
-      - To optimize the json_generic module and reduce the time spent while sending
-        GET requests.
+        - Fix the issue of one session remaining open after the task is finished.
+        - To optimize the json_generic module and reduce the time spent while sending
+          GET requests.
       major_changes:
-      - Add new fortios version 7.4.1.
-      - Update Ansible version from 2.9 to 2.14.
-      - Update Q&A with a resolution for Ansible Always Sending GET/PUT Requests as
-        POST Requests.
-      - Update the requirement.txt file to specify the sphinx_rtd_theme==1.3.0
+        - Add new fortios version 7.4.1.
+        - Update Ansible version from 2.9 to 2.14.
+        - Update Q&A with a resolution for Ansible Always Sending GET/PUT Requests as
+          POST Requests.
+        - Update the requirement.txt file to specify the sphinx_rtd_theme==1.3.0
       release_summary: patch release of 2.3.3
     fragments:
-    - 2.3.3_release.yml
-    release_date: '2023-11-01'
+      - 2.3.3_release.yml
+    release_date: "2023-11-01"
+  2.3.4:
+    changes:
+      major_changes:
+        - Format the contents in the changelog.yml file.
+        - update the required Ansible version to 2.14.0 in the runtime.yml file.
+      release_summary: patch release of 2.3.4
+    fragments:
+      - 2.3.4_release.yml
+    release_date: "2023-11-02"
