--- a/changelogs/.plugin-cache.yaml
+++ b/changelogs/.plugin-cache.yaml
@@ -16,10 +16,10 @@ plugins:
     fortios_json_generic:
       description: Config Fortinet's FortiOS and FortiGate with json generic method.
       name: fortios_json_generic
-      namespace: ''
+      namespace: ""
       version_added: 2.0.0
   netconf: {}
   shell: {}
   strategy: {}
   vars: {}
-version: 2.4.1
+version: 2.4.2
